--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -17,7 +17,7 @@ jobs:
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
 
       - name: Build da imagem Docker
-        run: docker build -t ${{ secrets.DOCKERHUB_USER }}/kaikycabral/wp_apache-updated:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USER }}/wp_apache-updated:latest .
 
       - name: Push da imagem para o Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USER }}/kaikycabral/wp_apache-updated:latest
+        run: docker push ${{ secrets.DOCKERHUB_USER }}/wp_apache-updated:latest
